istio/example/ingress-gateway/istio-ingress-gateway-example-deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: httpbin  
  labels:  
    app: httpbin  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: httpbin  
  template:  
    metadata:  
      labels:  
        app: httpbin  
    spec:  
      containers:  
      - name: httpbin  
        image: kennethreitz/httpbin  
        ports:  
        - containerPort: 80  
---
apiVersion: v1  
kind: Service  
metadata:  
  name: httpbin  
spec:  
  ports:  
    - port: 80  
      targetPort: 80  
  selector:  
    app: httpbin
