istio/example/ingress-gateway/istio-ingress-gateway-example-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3  
kind: Gateway  
metadata:  
  name: httpbin-gateway  
spec:  
  selector:  
    istio: ingressgateway # use Istio default gateway  
  servers:  
    - port:  
        number: 80  
        name: http  
        protocol: HTTP  
      hosts:  
        - "*"
