istio/example/ingress-gateway/istio-ingress-gateway-example-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3  
kind: DestinationRule  
metadata:  
  name: httpbin  
spec:  
  host: httpbin  
  trafficPolicy:  
    tls:  
      mode: DISABLE
