istio/example/ingress-gateway/istio-ingress-gateway-example-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3  
kind: VirtualService  
metadata:  
  name: httpbin  
spec:  
  hosts:  
    - httpbin  
  http:  
    - route:  
      - destination:  
          host: httpbin  
          port:  
            number: 80
